--- a/factor.html
+++ b/factor.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Factoring Integers</title>
+  <title>Factoring Integers 1.0</title>
   <meta charset="UTF-8">
   <style type="text/css">
   a {text-decoration: none; color: blue; font-weight: bold; cursor: pointer;}
